apple/Sources/UniFFI/ant_ffiFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
void*_Nonnull uniffi_ant_ffi_fn_clone_dataaddress(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_ant_ffi_fn_free_dataaddress(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_dataaddress_from_hex(RustBuffer hex, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_dataaddress_new(RustBuffer bytes, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_dataaddress_to_bytes(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_dataaddress_to_hex(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_clone_datamapchunk(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_ant_ffi_fn_free_datamapchunk(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_datamapchunk_from_hex(RustBuffer hex, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_datamapchunk_address(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_datamapchunk_to_hex(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_clone_datastream(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_ant_ffi_fn_free_datastream(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_datastream_collect_all(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_ant_ffi_fn_method_datastream_data_size(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_datastream_get_range(void*_Nonnull ptr, uint64_t start, uint64_t length, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_datastream_next_chunk(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);