dart/ant_ffi/lib/src/native/bindings.dart


  ffi.Pointer<ffi.Void> uniffi_ant_ffi_fn_clone_dataaddress(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_clone_dataaddress(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_clone_dataaddressPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Void> Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_clone_dataaddress');
  late final _uniffi_ant_ffi_fn_clone_dataaddress =
      _uniffi_ant_ffi_fn_clone_dataaddressPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  void uniffi_ant_ffi_fn_free_dataaddress(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_free_dataaddress(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_free_dataaddressPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_free_dataaddress');
  late final _uniffi_ant_ffi_fn_free_dataaddress =
      _uniffi_ant_ffi_fn_free_dataaddressPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  ffi.Pointer<ffi.Void> uniffi_ant_ffi_fn_constructor_dataaddress_from_hex(
    RustBuffer hex,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_constructor_dataaddress_from_hex(
      hex,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_constructor_dataaddress_from_hexPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Void> Function(
                  RustBuffer, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_constructor_dataaddress_from_hex');
  late final _uniffi_ant_ffi_fn_constructor_dataaddress_from_hex =
      _uniffi_ant_ffi_fn_constructor_dataaddress_from_hexPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              RustBuffer, ffi.Pointer<RustCallStatus>)>();

  ffi.Pointer<ffi.Void> uniffi_ant_ffi_fn_constructor_dataaddress_new(
    RustBuffer bytes,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_constructor_dataaddress_new(
      bytes,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_constructor_dataaddress_newPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Void> Function(
                  RustBuffer, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_constructor_dataaddress_new');
  late final _uniffi_ant_ffi_fn_constructor_dataaddress_new =
      _uniffi_ant_ffi_fn_constructor_dataaddress_newPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              RustBuffer, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_ant_ffi_fn_method_dataaddress_to_bytes(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_method_dataaddress_to_bytes(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_method_dataaddress_to_bytesPtr = _lookup<
          ffi.NativeFunction<
              RustBuffer Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_method_dataaddress_to_bytes');
  late final _uniffi_ant_ffi_fn_method_dataaddress_to_bytes =
      _uniffi_ant_ffi_fn_method_dataaddress_to_bytesPtr.asFunction<
          RustBuffer Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_ant_ffi_fn_method_dataaddress_to_hex(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_method_dataaddress_to_hex(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_method_dataaddress_to_hexPtr = _lookup<
          ffi.NativeFunction<
              RustBuffer Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_method_dataaddress_to_hex');
  late final _uniffi_ant_ffi_fn_method_dataaddress_to_hex =
      _uniffi_ant_ffi_fn_method_dataaddress_to_hexPtr.asFunction<
          RustBuffer Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  ffi.Pointer<ffi.Void> uniffi_ant_ffi_fn_clone_datamapchunk(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_clone_datamapchunk(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_clone_datamapchunkPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Void> Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_clone_datamapchunk');
  late final _uniffi_ant_ffi_fn_clone_datamapchunk =
      _uniffi_ant_ffi_fn_clone_datamapchunkPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  void uniffi_ant_ffi_fn_free_datamapchunk(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_free_datamapchunk(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_free_datamapchunkPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_free_datamapchunk');
  late final _uniffi_ant_ffi_fn_free_datamapchunk =
      _uniffi_ant_ffi_fn_free_datamapchunkPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  ffi.Pointer<ffi.Void> uniffi_ant_ffi_fn_constructor_datamapchunk_from_hex(
    RustBuffer hex,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_constructor_datamapchunk_from_hex(
      hex,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_constructor_datamapchunk_from_hexPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Void> Function(
                  RustBuffer, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_constructor_datamapchunk_from_hex');
  late final _uniffi_ant_ffi_fn_constructor_datamapchunk_from_hex =
      _uniffi_ant_ffi_fn_constructor_datamapchunk_from_hexPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              RustBuffer, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_ant_ffi_fn_method_datamapchunk_address(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_method_datamapchunk_address(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_method_datamapchunk_addressPtr = _lookup<
          ffi.NativeFunction<
              RustBuffer Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_method_datamapchunk_address');
  late final _uniffi_ant_ffi_fn_method_datamapchunk_address =
      _uniffi_ant_ffi_fn_method_datamapchunk_addressPtr.asFunction<
          RustBuffer Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_ant_ffi_fn_method_datamapchunk_to_hex(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_method_datamapchunk_to_hex(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_method_datamapchunk_to_hexPtr = _lookup<
          ffi.NativeFunction<
              RustBuffer Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_method_datamapchunk_to_hex');
  late final _uniffi_ant_ffi_fn_method_datamapchunk_to_hex =
      _uniffi_ant_ffi_fn_method_datamapchunk_to_hexPtr.asFunction<
          RustBuffer Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  ffi.Pointer<ffi.Void> uniffi_ant_ffi_fn_clone_datastream(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_clone_datastream(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_clone_datastreamPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Void> Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_clone_datastream');
  late final _uniffi_ant_ffi_fn_clone_datastream =
      _uniffi_ant_ffi_fn_clone_datastreamPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  void uniffi_ant_ffi_fn_free_datastream(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_free_datastream(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_free_datastreamPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_free_datastream');
  late final _uniffi_ant_ffi_fn_free_datastream =
      _uniffi_ant_ffi_fn_free_datastreamPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_ant_ffi_fn_method_datastream_collect_all(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_method_datastream_collect_all(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_method_datastream_collect_allPtr = _lookup<
          ffi.NativeFunction<
              RustBuffer Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_method_datastream_collect_all');
  late final _uniffi_ant_ffi_fn_method_datastream_collect_all =
      _uniffi_ant_ffi_fn_method_datastream_collect_allPtr.asFunction<
          RustBuffer Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  int uniffi_ant_ffi_fn_method_datastream_data_size(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_method_datastream_data_size(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_method_datastream_data_sizePtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_method_datastream_data_size');
  late final _uniffi_ant_ffi_fn_method_datastream_data_size =
      _uniffi_ant_ffi_fn_method_datastream_data_sizePtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_ant_ffi_fn_method_datastream_get_range(
    ffi.Pointer<ffi.Void> ptr,
    int start,
    int length,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_method_datastream_get_range(
      ptr,
      start,
      length,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_method_datastream_get_rangePtr = _lookup<
          ffi.NativeFunction<
              RustBuffer Function(ffi.Pointer<ffi.Void>, ffi.Uint64, ffi.Uint64,
                  ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_method_datastream_get_range');
  late final _uniffi_ant_ffi_fn_method_datastream_get_range =
      _uniffi_ant_ffi_fn_method_datastream_get_rangePtr.asFunction<
          RustBuffer Function(
              ffi.Pointer<ffi.Void>, int, int, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_ant_ffi_fn_method_datastream_next_chunk(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_method_datastream_next_chunk(
      ptr,
      out_status,
    );
  }
